<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center">

  <EditText
    android:id="@+id/et_content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/exercise01_msg_enter_your_content_here"/>

  <Button
    android:id="@+id/btn_clickme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/exercise01_action_click_me"/>

  <TextView
    android:id="@+id/tv_content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/exercise01_msg_textview_to_display_your_content"/>

</LinearLayout>